--- a/server/public/style.css
+++ b/server/public/style.css
@@ -3,9 +3,49 @@ body {
     text-align: center;
 }
 
+main {
+    display: flex;
+    flex-wrap: wrap; 
+}
+
+.header {
+    margin: 0;
+    background-color: rgb(159, 198, 200);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .calculations {
-    display: table-cell;
-    vertical-align: middle 
+    flex-direction: column;
+    flex: 1;
+    vertical-align: middle;
+    margin: 50px;
+}
+
+.history {
+    font-family: 'digital-7';
+    font-size: 50px;
+    padding-left: 80px;
+}
+
+.history:hover {
+    cursor: pointer;
+}
+
+.historySection {
+    font-family: 'digital-7';
+    font-size: 30px;
+    margin: 50px;
+    flex-direction: column;
+    flex: 1;
+    vertical-align: middle;
+    background-color: rgb(74, 139, 74);
+    min-height: 50px;
+    border-style: inset;
+    border-color: rgb(56, 49, 49);
+    max-width: 400px;
+    min-width: 300px;
+    margin-right: 15%;
+    padding: 30px;
 }
 
 .button {
@@ -17,17 +57,16 @@ body {
     margin: 1px;
 }
 
+.button:hover {
+    cursor: pointer;
+}
+
 .operator {
     margin: 1px;
     background-color: orange;
     border-radius: 2px;
     padding-left: 38px;
     padding-right: 38px;
-}
-
-.header {
-    margin: 0;
-    background-color: cadetblue;
 }
 
 .headerOne {
@@ -88,6 +127,10 @@ body {
     margin-top: 10px;
 }
 
+#clearHistory:hover {
+    cursor: pointer;
+}
+
 #equals {
     font-size: 25px;
     padding: 20px;
@@ -96,6 +139,10 @@ body {
     margin: 1px;
     padding-top: 58px;
     padding-bottom: 58px;
+}
+
+#equals:hover {
+    cursor: pointer;
 }
 
 .number {
@@ -132,4 +179,8 @@ body {
     width: 93px;
     margin: 1px;
     margin-right: -2px;
+}
+
+#clear:hover {
+    cursor: pointer;
 }
